tests/baselines/reference/unreachableFlowAfterThrowingForHead1(allowunreachablecode=false).errors.txt
unreachableFlowAfterThrowingForHead1.ts(9,2): error TS2304: Cannot find name 'as'.


==== unreachableFlowAfterThrowingForHead1.ts (1 errors) ====
    try {
        for (
            (function () { throw "1"; })();
            (function* () { throw "2"; })();
            (function* () { throw "3"; })()
        ) { }
    }
    catch (e) { }
     as  ;
     ~~
!!! error TS2304: Cannot find name 'as'.
    